test/bad/lambdas/lambda02.px

func f(g: String->Int->String): String def
    return g("abc", 2)

f(lambda x, y: x - y)
